# ext-cardano-kupo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: controller.yml  images.yml  instance.yml  proxy.yml  snapshoter.yml
bootstrap/: main.tf  variables.tf
bootstrap/cell/: main.tf  variables.tf
bootstrap/configs/mainnet/: config.json
bootstrap/configs/preprod/: config.json
bootstrap/configs/preview/: config.json
bootstrap/crds/: main.tf
bootstrap/feature/: main.tf  operator.tf
bootstrap/gateway/: acl.tf  cert.tf  http-route.tf  main.tf  rate-limiting.tf
bootstrap/instance/: main.tf  monitor.tf  sts.tf
bootstrap/proxy/: cert.tf  config.tf  deployment.tf  main.tf  service.tf
bootstrap/pvc/: main.tf
bootstrap/service/: main.tf
docker/: dockerfile.instance  dockerfile.operator  dockerfile.proxy
examples/: manifest.yaml
operator/: Cargo.toml  Dockerfile  README.md
operator/src/: config.rs  controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  utils.rs
operator/src/handlers/: auth.rs  gateway.rs  mod.rs
operator/src/helpers/: mod.rs
operator/test/: dbsyncport.yaml  manifest.yaml
operator/yaml/: crd.yaml  port.yaml  user-access.yaml  user-namespace.yaml
proxy/: Cargo.toml  README.md
proxy/examples/: manifest.yaml
proxy/src/: auth.rs  config.rs  health.rs  main.rs  proxy.rs  tiers.rs
snapshoter/: Dockerfile  Readme.md  package-lock.json
snapshoter/src/: backup.sh  entrypoint.sh  restore.sh
