[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
bytes = "1.7.1"
dotenv = "0.15.0"
futures-util = "0.3.30"
notify = "6.1.1"
operator = { path = "../operator" }
pingora = { version = "0.4.0", features = ["proxy", "openssl"] }
pingora-limits = "0.1.0"
prometheus = "0.13.3"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
